--- a/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
+++ b/OldVersions/GITATTRIBUTES/1/1-100/README.cfg
@@ -32,6 +32,36 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# R source file
+*.r linguist-detectable=true
+*.r linguist-documentation=false
+*.r linguist-language=R
+*.rdata linguist-detectable=true
+*.rdata linguist-documentation=false
+*.rdata linguist-language=R
+*.rda linguist-detectable=true
+*.rda linguist-documentation=false
+*.rda linguist-language=R
+*.rds linguist-detectable=true
+*.rds linguist-documentation=false
+*.rds linguist-language=R
+# RMarkdown source file
+*.Rmd linguist-detectable=true
+*.Rmd linguist-documentation=false
+*.Rmd linguist-language=RMarkdown
+# Makefile (GNU Make)
+*.mk linguist-detectable=true
+*.mk linguist-documentation=false
+*.mk linguist-language=Makefile
+*.mak linguist-detectable=true
+*.mak linguist-documentation=false
+*.mak linguist-language=Makefile
+*.make linguist-detectable=true
+*.make linguist-documentation=false
+*.make linguist-language=Makefile
+*.makefile linguist-detectable=true
+*.makefile linguist-documentation=false
+*.makefile linguist-language=Makefile
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -49,11 +79,10 @@
 *.srt linguist-documentation=false
 *.srt linguist-language=SubRip-Text
 # YAML (YAML Ain't Markup Language) document
-# Do not include, as it would become a dominant language that shouldn't be the language people refer this project to
-*.yml linguist-detectable=false
+*.yml linguist-detectable=true
 *.yml linguist-documentation=false
 *.yml linguist-language=YAML
-*.yaml linguist-detectable=false
+*.yaml linguist-detectable=true
 *.yaml linguist-documentation=false
 *.yaml linguist-language=YAML
 # Markdown
@@ -70,20 +99,6 @@
 *.markdown linguist-detectable=false
 *.markdown linguist-documentation=false
 *.markdown linguist-language=Markdown
-# Makefile (GNU Make)
-# Do not include, as it is not needed to be shown
-*.mk linguist-detectable=false
-*.mk linguist-documentation=false
-*.mk linguist-language=Makefile
-*.mak linguist-detectable=false
-*.mak linguist-documentation=false
-*.mak linguist-language=Makefile
-*.make linguist-detectable=false
-*.make linguist-documentation=false
-*.make linguist-language=Makefile
-*.makefile linguist-detectable=false
-*.makefile linguist-documentation=false
-*.makefile linguist-language=Makefile
 # SVG (Scalable Vector Graphics) image file
 # Do not include, as it would become the 100% dominant language and would hide all the other languages as "other"
 *.svg linguist-detectable=false
@@ -161,10 +176,13 @@
 *.gif linguist-detectable=false
 *.gif linguist-documentation=false
 *.gif linguist-language=GIF
+
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2023, Friday, September 1st at 2:03 pm PST)
+# Line count (including blank lines and compiler line): 189
+
 # End of script
